add first style for question screens

--- a/newebe/client/app/views/styles/_base.styl
+++ b/newebe/client/app/views/styles/_base.styl
@@ -27,6 +27,11 @@ a:visited
 
 .middle
     margin-top: 20%
+    
+@keyframes fadein
+    from
+        opacity: 0
+    to
+        opacity: 1
 
-.question
-    font-family: robotic
+
