--- a/newebe/client/app/views/styles/application.styl
+++ b/newebe/client/app/views/styles/application.styl
@@ -16,23 +16,21 @@ body
 #content
     height: 100%
     box-sizing: border-box
-    
+    font-family: main
+
 #content
     text-align: center
     animation-duration: 3s
     animation-name: fadein
 
-#sesame
-    padding: 8px
-    border: 0
-    border-radius: 40px
-    text-align: center
-    font-size: 30px
-    color: #444
-    box-shadow: inset 1px 1px 10px #888, 0px 0px 5px rgba(255, 255, 255, 1)
+#home
+    .question
+        font-family: robotic, main
+        font-size: 3em
 
-@keyframes fadein
-    from
-        opacity: 0
-    to
-        opacity: 1
+    input
+        border: none
+        box-shadow: inset 4px 4px 10px #888, 0px 0px 5px rgba(255, 255, 255, 1)
+        font-size: 2em
+        padding: 0.4em
+        border-radius: 2em
