update login view and question template

--- a/newebe/client/app/views/templates/question.jade
+++ b/newebe/client/app/views/templates/question.jade
@@ -1,3 +1,3 @@
-.middle
-    p.question #{question}
-    input(id="#{fieldId}", type="#{type}")
+.middle.center.question 
+    p #{question}
+    input.center(id="#{fieldId}", type="#{type}")
