add activtiy view

--- a/newebe/client/app/views/templates/activities.jade
+++ b/newebe/client/app/views/templates/activities.jade
@@ -1,2 +1,15 @@
 h1 activities
-#activity-list
+
+
+.line 
+    #activity-all.activity-list.mod.left.w33
+        h2.activity-list-title all
+        .activities
+
+    #activity-family.activity-list.mod.left.w33
+        h2.activity-list-title family
+        .activities
+
+    #activity-geeks.activity-list.mod.left.w33
+        h2.activity-list-title geeks
+        .activities
