--- a/newebe/client/app/views/templates/activity.jade
+++ b/newebe/client/app/views/templates/activity.jade
@@ -1,1 +1,7 @@
-span at #{model.date}
+div.infos.small
+    span.author #{model.author}
+    span.verb #{model.verb}
+div.pt05
+    | #{model.content}
+    
+span.date.smaller #{model.displayDate}
