--- a/newebe/client/app/views/styles/_base.styl
+++ b/newebe/client/app/views/styles/_base.styl
@@ -28,10 +28,19 @@ a:visited
 .middle
     margin-top: 20%
     
+.pt05
+    padding-top: 5px
+
+// Animations
+
 @keyframes fadein
     from
         opacity: 0
     to
         opacity: 1
 
-
+@keyframes pullin
+    from
+        box-shadow: 0
+    to
+        box-shadow: inset 4px 4px 10px #888, 0px 0px 5px rgba(255, 255, 255, 1)
