--- a/newebe/client/public/stylesheets/app.css
+++ b/newebe/client/public/stylesheets/app.css
@@ -1320,6 +1320,61 @@ a:visited:hover {
     filter: none;
   }
 }
+@-moz-keyframes pullin {
+  0% {
+    -webkit-box-shadow: 0;
+    box-shadow: 0;
+  }
+
+  100% {
+    -webkit-box-shadow: inset 4px 4px 10px #888 0px 0px 5px #fff;
+    box-shadow: inset 4px 4px 10px #888 0px 0px 5px #fff;
+  }
+}
+@-webkit-keyframes pullin {
+  0% {
+    -webkit-box-shadow: 0;
+    box-shadow: 0;
+  }
+
+  100% {
+    -webkit-box-shadow: inset 4px 4px 10px #888 0px 0px 5px #fff;
+    box-shadow: inset 4px 4px 10px #888 0px 0px 5px #fff;
+  }
+}
+@-o-keyframes pullin {
+  0% {
+    -webkit-box-shadow: 0;
+    box-shadow: 0;
+  }
+
+  100% {
+    -webkit-box-shadow: inset 4px 4px 10px #888 0px 0px 5px #fff;
+    box-shadow: inset 4px 4px 10px #888 0px 0px 5px #fff;
+  }
+}
+@-ms-keyframes pullin {
+  0% {
+    -webkit-box-shadow: 0;
+    box-shadow: 0;
+  }
+
+  100% {
+    -webkit-box-shadow: inset 4px 4px 10px #888 0px 0px 5px #fff;
+    box-shadow: inset 4px 4px 10px #888 0px 0px 5px #fff;
+  }
+}
+@keyframes pullin {
+  0% {
+    -webkit-box-shadow: 0;
+    box-shadow: 0;
+  }
+
+  100% {
+    -webkit-box-shadow: inset 4px 4px 10px #888 0px 0px 5px #fff;
+    box-shadow: inset 4px 4px 10px #888 0px 0px 5px #fff;
+  }
+}
 @font-face {
   font-family: main;
   src: url("../fonts/open-sans-regular.ttf");
@@ -1507,16 +1562,6 @@ body,
 }
 #content {
   text-align: center;
-  -webkit-animation-duration: 3s;
-  -moz-animation-duration: 3s;
-  -o-animation-duration: 3s;
-  -ms-animation-duration: 3s;
-  animation-duration: 3s;
-  -webkit-animation-name: fadein;
-  -moz-animation-name: fadein;
-  -o-animation-name: fadein;
-  -ms-animation-name: fadein;
-  animation-name: fadein;
 }
 #home .question {
   font-family: robotic, main;
@@ -1524,12 +1569,26 @@ body,
 }
 #home input {
   border: none;
-  -webkit-box-shadow: inset 4px 4px 10px #888, 0px 0px 5px #fff;
-  box-shadow: inset 4px 4px 10px #888, 0px 0px 5px #fff;
   font-size: 2em;
   padding: 0.4em;
   -webkit-border-radius: 2em;
   border-radius: 2em;
+}
+#home input:active {
+  border: 0;
+}
+#home input:focus {
+  border: 0;
+}
+.activity {
+  border-top: 1px solid #ddd;
+}
+.author {
+  font-weight: bold;
+  margin-right: 5px;
+}
+.content {
+  padding-top: 5px;
 }
 .chromeframe { margin: 0.2em 0; background: #ccc; color: #000; padding: 0.2em 0; }
 .ir { display: block; border: 0; text-indent: -999em; overflow: hidden; background-color: transparent; background-repeat: no-repeat; text-align: left; direction: ltr; *line-height: 0; }
