displays more properly activities

--- a/newebe/client/app/views/styles/_base.styl
+++ b/newebe/client/app/views/styles/_base.styl
@@ -11,12 +11,6 @@ body
 body
     text-rendering optimizeLegibility
 
-body,
-input
-    color #444
-    font 300 16px Geneva, Verdana, "Lucida Sans", "Lucida Grande", "Lucida Sans Unicode", sans-serif
-    line-height 1.2
-
 a,
 a:visited
     color #0086cc
@@ -26,7 +20,7 @@ a:visited
         text-decoration underline
 
 .middle
-    margin-top: 20%
+    padding-top: 20%
     
 .pt05
     padding-top: 5px
