--- a/newebe/client/app/views/templates/activities.jade
+++ b/newebe/client/app/views/templates/activities.jade
@@ -1,10 +1,6 @@
 h1 activities
-
-
 .line 
-    #activity-all.activity-list.mod.left.w33
-        h2.activity-list-title all
-        .activities
+    #activity-all
 
     #activity-family.activity-list.mod.left.w33
         h2.activity-list-title family
