--- a/newebe/client/app/views/templates/activity.jade
+++ b/newebe/client/app/views/templates/activity.jade
@@ -2,6 +2,6 @@ div.infos.small
     span.author #{model.author}
     span.verb #{model.verb}
 div.pt05
-    | #{model.content}
+    | !{model.content}
     
 span.date.smaller #{model.displayDate}
