--- a/newebe/client/app/views/templates/home.jade
+++ b/newebe/client/app/views/templates/home.jade
@@ -1,4 +1,12 @@
-#menu.hidden
-    button#logout-button.ui-button logout
+nav#navigation.hidden
+    ul
+        li
+            a#activities-button activities
+        li
+            a#microposts-button microposts
+        li
+            a#contacts-button contacts
+        li
+            a#logout-button logout
 #home
     p loading...
