--- a/newebe/client/public/stylesheets/app.css
+++ b/newebe/client/public/stylesheets/app.css
@@ -1224,7 +1224,90 @@ label {
 	body {
 		-webkit-text-size-adjust: 100%;
 	}
-}* {
+}/* nav.css : styles de base pour une navigation responsive.
+Attention : ne fonctionne pas toujours très bien sur les anciens navigateurs ou OS mobiles (par exemple Android 2.1) */
+
+label[for^="toggle"],
+[type="checkbox"] {
+	cursor: pointer;
+}
+label[for^="toggle"] + [type="checkbox"] { display: none; }
+
+#navigation ul {
+	margin: 0;
+	padding: 0;
+}
+#navigation li { display: inline; }
+#navigation li a {
+	display: inline-block;
+	padding: .6em 1em;
+	color: #111;
+	border: 1px solid #aaa;
+	text-decoration: none;
+	text-shadow: 1px 1px 0 #fff;
+	background: #eee;
+}
+#navigation li a:hover,
+#navigation li a:active {
+	background: #ddd;
+	text-decoration: underline;
+}
+
+@media (max-width: 640px) {
+	/* unicode character for button */
+	[data-icon]:before { content: attr(data-icon); }
+
+	/* styling menu button */
+	label[for^="toggle"] {
+		position: absolute;
+			top: 7px; right: 4px;
+		z-index: 1337;
+		padding: .1em .25em;
+		font-size: 3.8em;
+		font-weight: bold;
+		line-height: .7em;
+		background-color: #444;
+		text-shadow: 1px 1px 0 rgba(255, 255, 255, .3);
+		border-radius: 4px;
+		color: #fff;
+	}
+
+	/* handling click/tap with CSS3 target */
+	#toggle-menu:checked + ul {
+		max-height: 30em !important; /* number of menu items * 6em */
+	}
+
+	/* styling navigation items */
+	#navigation ul {
+		max-height: 0;
+		overflow: hidden;
+		-webkit-transition: max-height .4s;
+		-moz-transition: max-height .4s;
+		-o-transition: max-height .4s;
+		-ms-transition: max-height .4s;
+		transition: max-height .4s;
+	}
+	#navigation li a {
+		display: block;
+		padding: .9em .6em;
+		border: 0; border-top: 1px solid #aaa;
+		font-size: 1.1em;
+	}
+	#navigation li a:before {
+		content: "›";
+		font-size: 1.2em;
+		margin-right: .6em;
+		line-height: 1;
+	}
+	#navigation li:last-child a {
+		border-bottom: 1px solid #aaa;
+	}
+	#navigation li a:hover,
+	#navigation li a:active {
+		text-decoration: none;
+	}
+}
+* {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
@@ -1237,12 +1320,6 @@ body {
 body {
   text-rendering: optimizeLegibility;
 }
-body,
-input {
-  color: #444;
-  font: 300 16px Geneva, Verdana, "Lucida Sans", "Lucida Grande", "Lucida Sans Unicode", sans-serif;
-  line-height: 1.2;
-}
 a,
 a:visited {
   color: #0086cc;
@@ -1253,7 +1330,10 @@ a:visited:hover {
   text-decoration: underline;
 }
 .middle {
-  margin-top: 20%;
+  padding-top: 20%;
+}
+.pt05 {
+  padding-top: 5px;
 }
 @-moz-keyframes fadein {
   0% {
@@ -1580,15 +1660,12 @@ body,
 #home input:focus {
   border: 0;
 }
-.activity {
+#activities-view .activity {
   border-top: 1px solid #ddd;
 }
-.author {
+#activities-view .author {
   font-weight: bold;
   margin-right: 5px;
-}
-.content {
-  padding-top: 5px;
 }
 .chromeframe { margin: 0.2em 0; background: #ccc; color: #000; padding: 0.2em 0; }
 .ir { display: block; border: 0; text-indent: -999em; overflow: hidden; background-color: transparent; background-repeat: no-repeat; text-align: left; direction: ltr; *line-height: 0; }
