--- a/newebe/client/app/views/styles/application.styl
+++ b/newebe/client/app/views/styles/application.styl
@@ -56,6 +56,8 @@ body
             font-weight: bold
             text-decoration: none
             text-shadow: 0 0 0 #FFF
+            background-color: purple
+            color: white
 
         a.active
             background-color: #DEF
@@ -69,3 +71,22 @@ body
     .author
         font-weight: bold
         margin-right: 5px 
+
+
+// Profile
+
+#profile-view
+    p
+        margin: 0
+
+    #profile-name-field
+        padding: 20px 0 0 20px
+        font-size: 40px
+        font-weight: bold
+
+    #profile-url-field
+        font-size: 16px
+        padding-left: 20px
+
+    #profile-picture
+        margin: 20px
