--- a/newebe/client/app/views/templates/home.jade
+++ b/newebe/client/app/views/templates/home.jade
@@ -1,11 +1,13 @@
 nav#navigation.hidden
     ul
         li
-            a#activities-button.active activities
+            a#activities-button.active(href="#activities") activities
         li
-            a#microposts-button microposts
+            a#microposts-button(href="#microposts") microposts
         li
-            a#contacts-button contacts
+            a#contacts-button(href="#contacts") contacts
+        li
+            a#profile-button(href="#profile") profile
         li.right
             a#logout-button logout
         li.right
