add profile styles

--- a/newebe/client/app/views/styles/_base.styl
+++ b/newebe/client/app/views/styles/_base.styl
@@ -3,6 +3,8 @@
 red = #D82545
 purple = #AD2BAD
 blue = #AD2BAD
+pink = #F71568
+green = #A0B046
 
 *
   box-sizing: border-box
@@ -62,3 +64,19 @@ button:active
     
 .pt05
     padding-top: 5px
+
+.success
+    color: green
+
+.error
+    color: pink
+
+.full-size
+    width: 100%
+    height: 100%
+
+.full-height
+    height: 100%
+
+.w400p
+    width: 400px
