--- a/newebe/client/app/views/styles/application.styl
+++ b/newebe/client/app/views/styles/application.styl
@@ -11,6 +11,14 @@
 @import '_layout'
 @import '_responsive'
 
+iframe
+    border 0
+
+
+full-size
+    width: 100%
+    height: 100%
+
 html
 body
 #content
@@ -73,20 +81,82 @@ body
         margin-right: 5px 
 
 
-// Profile
-
 #profile-view
-    p
-        margin: 0
 
-    #profile-name-field
-        padding: 20px 0 0 20px
+    p
+        margin: 0 
+
+    input:hover
+    input:active
+    input:focus
+        border-bottom: 1px solid purple
+
+    input
+        border-radius: 0em
+        padding: 0em
+        border-bottom: 1px solid transparent
+        width: 100%
+
+    button
+        margin-left: 0
+
+    #profile-description
+        border: 1px solid transparent
+
+    #profile-description:hover
+    #profile-description:active
+        border: 1px solid purple
+
+    #profile-name-field 
         font-size: 40px
         font-weight: bold
 
     #profile-url-field
         font-size: 16px
-        padding-left: 20px
 
-    #profile-picture
-        margin: 20px
+    // Display action buttons when mouse is over the section
+    .main-section
+        #change-picture-button
+        #sesame-stuff
+            display:none
+
+        #change-password-button
+            margin-left: 0
+            display: none
+
+    .main-section:hover
+        #change-picture-button
+        #sesame-stuff
+            display:block
+
+        #change-password-button
+            display: inline
+
+    #sesame-form
+        display: none
+
+    // Ugly stuff required to override fine-uploader styles
+    #change-picture-button
+        cursor: pointer
+        background-color: red
+        padding: 10px
+        color: white
+        font-weight: bold
+        height: 45px
+        width: 100%
+        max-width: 400px
+
+        input
+            cursor: pointer
+            font-size: 0.1em
+            padding: 0em
+            border-radius: 0em
+
+    #change-picture-button:hover
+        cursor: pointer
+        background-color: purple
+
+    #change-picture-button:active
+        cursor: pointer
+        background-color: purple - 10%
+        box-shadow: inset 3px 3px 3px rgba(0, 0, 0, 0.2)
