--- a/newebe/client/app/views/templates/profile.jade
+++ b/newebe/client/app/views/templates/profile.jade
@@ -1,13 +1,21 @@
-.line
-    .w33.mod.left
-        img#profile-picture(src="static/images/owner_thumbnail.jpg")
-        p
-            input#profile-name-field(type="text", value="#{model.name}")
-        p
-            input#profile-url-field(type="text", value="#{model.url}")
-        p
-            button change thumbnail
-        p
-            button change password
-    .w66.mod.left
-        p #{model.description}
+.line.full-size
+    .w400p.mod.left.full-size.main-section
+        #profile-picture-section
+            img#profile-picture(src="user/picture.jpg")
+            #change-picture-button
+        #profile-data-section
+            p
+                input#profile-name-field(type="text", value="#{model.name}")
+            p
+                input#profile-url-field(type="text", value="#{model.url}")
+            #sesame-stuff
+                p
+                    button#change-password-button change sesame
+                #sesame-form
+                    input#profile-sesame-field(type="text", value="")
+                    button#confirm-password-button confirm new sesame
+                    .success Sesame changed successfully
+                    .error An error occured
+
+    .mod.full-height
+        #profile-description.editable(data-button-class="all")
