improve profile description styles

--- a/newebe/client/app/views/styles/application.styl
+++ b/newebe/client/app/views/styles/application.styl
@@ -102,6 +102,8 @@ body
 
     #profile-description
         border: 1px solid transparent
+        padding: 1em
+        font-size: 1.4em
 
     #profile-description:hover
     #profile-description:active
