--- a/newebe/client/public/stylesheets/app.css
+++ b/newebe/client/public/stylesheets/app.css
@@ -2747,6 +2747,43 @@ body,
   -webkit-box-shadow: inset 3px 3px 3px rgba(0,0,0,0.2);
   box-shadow: inset 3px 3px 3px rgba(0,0,0,0.2);
 }
+#contacts-view #new-contact-field {
+  margin-top: 12px;
+  margin-bottom: 20px;
+  margin-left: 10px;
+  margin: 15px 0 20px 10px;
+  -webkit-border-radius: 0em;
+  border-radius: 0em;
+  width: 400px;
+  padding: 0;
+  border-bottom: 1px solid transparent;
+}
+#contacts-view #new-contact-field:focus,
+#contacts-view #new-contact-field:active {
+  border-bottom: 1px solid #ad2bad;
+}
+#contacts-view .contact {
+  padding: 10px;
+}
+#contacts-view .contact .url {
+  font-style: italic;
+  margin-left: 20px;
+  padding-top: 15px;
+}
+#contacts-view .contact .state {
+  padding-top: 15px;
+  width: 100px;
+}
+#contacts-view .contact .contact-buttons {
+  padding: 0;
+  display: none;
+}
+#contacts-view .contact .contact-buttons button {
+  padding: 5px 10px;
+}
+#contacts-view .contact:hover .contact-buttons {
+  display: table;
+}
 .chromeframe { margin: 0.2em 0; background: #ccc; color: #000; padding: 0.2em 0; }
 .ir { display: block; border: 0; text-indent: -999em; overflow: hidden; background-color: transparent; background-repeat: no-repeat; text-align: left; direction: ltr; *line-height: 0; }
 .ir br { display: none; }
