basic contact operations

--- a/newebe/client/app/views/styles/application.styl
+++ b/newebe/client/app/views/styles/application.styl
@@ -167,14 +167,11 @@ body
 #contacts-view
 
     #new-contact-field
-        margin-top: 12px
-        margin-bottom: 20px
-        margin-left: 10px
-        margin: 15px 0 20px 10px
+        margin: 19px 0 20px 20px
         border-radius: 0em
-        width: 400px
-        padding: 0
-        border-bottom: 1px solid transparent
+        width: 600px
+        padding: 0 0 0 10px
+        border: 1px solid #DDD
 
     #new-contact-field:focus
     #new-contact-field:active
@@ -182,6 +179,9 @@ body
 
     .contact
         padding: 10px
+
+        .name
+            padding-top: 15px
 
         .url
             font-style: italic
@@ -198,6 +198,10 @@ body
 
             button
                 padding: 5px 10px
+
+    p.error
+        margin-top: 0
+        margin-left: 20px
 
     .contact:hover
 
