--- a/newebe/client/app/views/templates/contact.jade
+++ b/newebe/client/app/views/templates/contact.jade
@@ -4,5 +4,6 @@
     .url.mod.left #{model.url}
 
     .contact-buttons.mod.left
+        button.contact-accept-button accept
         button.contact-retry-button retry
         button.contact-delete-button X
