--- a/newebe/client/app/views/templates/contacts.jade
+++ b/newebe/client/app/views/templates/contacts.jade
@@ -1,2 +1,3 @@
-input#new-contact-field(type="text")
+input#new-contact-field.field(type="text")
 button#add-contact-button add contact
+p.error &nbsp;
