first version of contact view

--- a/newebe/client/app/views/styles/_base.styl
+++ b/newebe/client/app/views/styles/_base.styl
@@ -2,7 +2,7 @@
 
 red = #D82545
 purple = #AD2BAD
-blue = #AD2BAD
+blue = #DEF
 pink = #F71568
 green = #A0B046
 
@@ -84,3 +84,18 @@ button:active
 .field
     box-shadow: inset 3px 3px 3px rgba(0, 0, 0, 0.2)
     padding-left: 10px
+
+.toggle-button
+    background-color: black
+    box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.2)
+
+.toggle-button:hover
+    background: purple
+
+.toggle-button.selected
+    background-color: blue
+    color: blue - 80%
+
+.toggle-button.selected:hover
+    background: purple
+    color: white
