improve contact line rendering

--- a/newebe/client/app/views/styles/_base.styl
+++ b/newebe/client/app/views/styles/_base.styl
@@ -95,6 +95,7 @@ button:active
 .toggle-button.selected
     background-color: blue
     color: blue - 80%
+    box-shadow: none
 
 .toggle-button.selected:hover
     background: purple
