--- a/newebe/client/app/views/styles/application.styl
+++ b/newebe/client/app/views/styles/application.styl
@@ -179,7 +179,9 @@ body
     #new-contact-field:active
         border-bottom: 1px solid purple
 
-    .contact
+    .contact-line
+        display: block
+        width: 100%
         padding: 10px
 
         .name
@@ -201,7 +203,11 @@ body
             button
                 padding: 5px 10px
 
-    .contact:hover
+        .contact-tag
+            font-size: 10px
+            padding: 5px
+
+    .contact-line:hover
         .contact-buttons
             display: table
 
