display tags for each contacts

--- a/newebe/client/app/views/styles/application.styl
+++ b/newebe/client/app/views/styles/application.styl
@@ -182,7 +182,7 @@ body
     .contact-line
         display: block
         width: 100%
-        padding: 10px
+        padding: 0
 
         .name
             padding-top: 15px
@@ -225,6 +225,18 @@ body
     .tag-selector:hover
         .tag-delete-button
             display: inline-block
+
+    #tag-list
+        margin-bottom: 20px
+
+    #tag-list
+    #add-tag
+    .contact-tags
+        display: inline-block
+
+    .contact-tags
+        padding: 0
+        margin-top: 4px
 
 .tag-select-button
     display: inline-block
