--- a/newebe/client/app/views/templates/tag_all.jade
+++ b/newebe/client/app/views/templates/tag_all.jade
@@ -1,2 +1,2 @@
-button.tag-select-button.toggle-button #{model.name}
+button.tag-select-button.toggle-button.selected #{model.name}
 button.tag-add-button +
