improve microposts experience

--- a/newebe/client/app/views/styles/_base.styl
+++ b/newebe/client/app/views/styles/_base.styl
@@ -58,11 +58,30 @@ button:active
     background-color: purple - 10%
     box-shadow: inset 3px 3px 3px rgba(0, 0, 0, 0.2)
 
+textarea
+    border: 1px solid grey
+    margin: 10px
+    border-radius: 0em
+    padding: 5px
+    border: 1px solid #DDD
+    box-shadow: inset 3px 3px 3px rgba(0, 0, 0, 0.1)
+    width: 600px
+
+textarea:focus
+textarea:active
+textarea:hover
+    border: 1px solid purple
+
+
+
 // Helpers
 
 .middle
     padding-top: 20%
     
+.pa1
+    padding: 10px
+
 .pt05
     padding-top: 5px
 
