--- a/newebe/client/app/views/templates/activities.jade
+++ b/newebe/client/app/views/templates/activities.jade
@@ -1,15 +1,9 @@
-.pa1
+div
     textarea#micropost-field
-.pa1
+div
     button#micropost-post-button send
 
-.line 
+.line
     #activity-all
-
-    #activity-family.activity-list.mod.left.w33
-        h2.activity-list-title family
-        .activities
-
-    #activity-geeks.activity-list.mod.left.w33
-        h2.activity-list-title geeks
-        .activities
+.line
+    button#more-activities-button more
