--- a/newebe/client/app/views/templates/activity.jade
+++ b/newebe/client/app/views/templates/activity.jade
@@ -1,7 +1,9 @@
-div.infos.small
+.infos.small
     span.author #{model.author}
     span.verb #{model.verb}
-div.pt05
+.pt05
     | !{model.content}
     
 span.date.smaller #{model.displayDate}
+.activity-buttons
+    button.activity-delete-button delete
