--- a/newebe/client/app/views/templates/home.jade
+++ b/newebe/client/app/views/templates/home.jade
@@ -1,9 +1,7 @@
 nav#navigation.hidden
     ul
         li
-            a#activities-button.active(href="#activities") activities
-        li
-            a#microposts-button(href="#microposts") microposts
+            a#activities-button.active(href="#activities") news feed
         li
             a#contacts-button(href="#contacts") contacts
         li
