--- a/newebe/client/app/views/styles/application.styl
+++ b/newebe/client/app/views/styles/application.styl
@@ -255,3 +255,21 @@ body
     
 .toggle-button:active
     box-shadow: none
+
+#activities-view
+    .activity-buttons 
+        display: none
+
+    .activity button
+        margin-left: 0
+        padding: 5px
+        font-size: 12px
+
+    .activity p
+        margin: 3px 0
+
+    .activity:hover
+        background: #F5F0FA
+
+    .activity.selected
+        background: blue + 40%
