--- a/newebe/client/public/stylesheets/app.css
+++ b/newebe/client/public/stylesheets/app.css
@@ -2282,8 +2282,27 @@ button:active {
   -webkit-box-shadow: inset 3px 3px 3px rgba(0,0,0,0.2);
   box-shadow: inset 3px 3px 3px rgba(0,0,0,0.2);
 }
+textarea {
+  border: 1px solid #808080;
+  margin: 10px;
+  -webkit-border-radius: 0em;
+  border-radius: 0em;
+  padding: 5px;
+  border: 1px solid #ddd;
+  -webkit-box-shadow: inset 3px 3px 3px rgba(0,0,0,0.1);
+  box-shadow: inset 3px 3px 3px rgba(0,0,0,0.1);
+  width: 600px;
+}
+textarea:focus,
+textarea:active,
+textarea:hover {
+  border: 1px solid #ad2bad;
+}
 .middle {
   padding-top: 20%;
+}
+.pa1 {
+  padding: 10px;
 }
 .pt05 {
   padding-top: 5px;
@@ -2856,6 +2875,23 @@ body,
 .toggle-button:active {
   -webkit-box-shadow: none;
   box-shadow: none;
+}
+#activities-view .activity-buttons {
+  display: none;
+}
+#activities-view .activity button {
+  margin-left: 0;
+  padding: 5px;
+  font-size: 12px;
+}
+#activities-view .activity p {
+  margin: 3px 0;
+}
+#activities-view .activity:hover {
+  background: #f5f0fa;
+}
+#activities-view .activity.selected {
+  background: #ebf5ff;
 }
 .chromeframe { margin: 0.2em 0; background: #ccc; color: #000; padding: 0.2em 0; }
 .ir { display: block; border: 0; text-indent: -999em; overflow: hidden; background-color: transparent; background-repeat: no-repeat; text-align: left; direction: ltr; *line-height: 0; }
