--- a/newebe/client/app/views/templates/home.jade
+++ b/newebe/client/app/views/templates/home.jade
@@ -3,6 +3,8 @@ nav#navigation.hidden
         li
             a#activities-button.active(href="#activities") news feed
         li
+            a#activities-button.active(href="#notes") notes
+        li
             a#contacts-button(href="#contacts") contacts
         li
             a#profile-button(href="#profile") profile
