display and stylise note rows

--- a/newebe/client/app/views/styles/_base.styl
+++ b/newebe/client/app/views/styles/_base.styl
@@ -120,3 +120,6 @@ textarea:hover
 .toggle-button.selected:hover
     background: purple
     color: white
+
+.simple-row
+    border-top: 1px solid #DDD
