--- a/newebe/client/app/views/styles/_note.styl
+++ b/newebe/client/app/views/styles/_note.styl
@@ -1,2 +1,24 @@
-.note
-    // Note Module
+.note-buttons 
+    display: none
+
+.note button
+    margin-left: 0
+    padding: 5px
+    font-size: 12px
+
+.note p
+    margin: 3px 0
+
+.note:hover
+    background: #F5F0FA
+
+.note.selected
+    background: blue + 40%
+
+.note-content
+    height: 100%
+    width: 100%
+
+.note-content:hover
+    border: 1px solid purple
+
