--- a/newebe/client/app/views/templates/note.jade
+++ b/newebe/client/app/views/templates/note.jade
@@ -1,5 +1,6 @@
-.mod.w50
-    .line #{model.title}
+.mod.w33.left
+    .line 
+        input.note-title(type="text", value="#{model.title}")
     .line
         span.date.smaller #{model.displayDate}
         
@@ -7,4 +8,4 @@
         .note-buttons
             button.note-delete-button delete
 
-.mod.w50.content-note #{model.content}
+.mod.w66.left.content-note.editable #{model.content}
