refactor note module + allow sorting

--- a/newebe/client/app/views/templates/note.jade
+++ b/newebe/client/app/views/templates/note.jade
@@ -8,4 +8,4 @@
         .note-buttons
             button.note-delete-button delete
 
-.mod.w66.left.content-note.editable #{model.content}
+.mod.w66.left.content-note.editable(data-button-class="all") #{model.content}
