move activity view to micropost only view

--- a/newebe/client/app/views/styles/application.styl
+++ b/newebe/client/app/views/styles/application.styl
@@ -74,8 +74,8 @@ body
             color: #DEF - 80%
 
 
-#activities-view
-    .activity
+#microposts-view
+    .micropost
         border-top: 1px solid #DDD
 
     .author
@@ -258,20 +258,20 @@ body
 .toggle-button:active
     box-shadow: none
 
-#activities-view
-    .activity-buttons 
+#microposts-view
+    .micropost-buttons 
         display: none
 
-    .activity button
+    .micropost button
         margin-left: 0
         padding: 5px
         font-size: 12px
 
-    .activity p
+    .micropost p
         margin: 3px 0
 
-    .activity:hover
+    .micropost:hover
         background: #F5F0FA
 
-    .activity.selected
+    .micropost.selected
         background: blue + 40%
