--- a/newebe/client/app/views/templates/home.jade
+++ b/newebe/client/app/views/templates/home.jade
@@ -1,7 +1,7 @@
 nav#navigation.hidden
     ul
         li
-            a#activities-button.active(href="#activities") news feed
+            a#microposts-button.active(href="#microposts") news feed
         li
             a#activities-button.active(href="#notes") notes
         li
