--- a/newebe/client/app/views/templates/microposts.jade
+++ b/newebe/client/app/views/templates/microposts.jade
@@ -1,7 +1,10 @@
-.pa1
+div
     textarea#micropost-field
-.pa1
+div
     button#micropost-post-button send
-
-h1 all
-#microposts-all
+.line
+    #micropost-tag-list
+.line
+    #micropost-all
+.line
+    button#more-microposts-button more
